Add build folder to .gitignore. Add matlab script for work with trajectories with awesome condition number of Jacobian

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+#################### Build parts
+# add ignore build directory
+build/
+
 #################### Matlab
 # Windows default autosave extension
 *.asv
