--- a/Paper/Makefile
+++ b/Paper/Makefile
@@ -1,11 +1,12 @@
 OUTPUT=build
 MAIN_TEX_FILE_NAME=ICPS_manipulator
 PDF_PATH=./build/$(MAIN_TEX_FILE_NAME).pdf
+TEX = -shell-escape -interaction=nonstopmode -file-line-error
 
 all: pdf
 
 pdf:
-	@pdflatex -output-directory=$(OUTPUT) $(MAIN_TEX_FILE_NAME).tex
+	@pdflatex $(TEX) -output-directory=$(OUTPUT) $(MAIN_TEX_FILE_NAME).tex
 
 show: view
 
